# Hearth_Attack_DS_Project

./: .dockerignore  .gitignore  Dockerfile_Hearth_attack_model  README.md  example_ENV_FILE  pyproject.toml
charts/: BarPlotPandasStrategy.py  BoxPlotMatplotlibStrategy.py  BoxPlotPandasStrategy.py  PlotFactory.py
data_acess/: DataRetrieverFactory.py  KaggleRetrieverStrategy.py
machine_learning/builder_strategy/: KNNStrategy.py  ParamGridBuilder.py
machine_learning/decorator/: BaseParamGrid.py  IParamGridComponent.py
notebook/: 00-Data_Gather.ipynb  01-EDA.ipynb  02-Data_Clean_Transformation.ipynb  03-Feature_Engineering.ipynb  04-Model_Train.ipynb
sampling/: SplitData.py
scripts_to_docker/: predict_best_model.py  train_best_model.py
serialized_models/: Random_forest.joblib
src/: config.py
src/charts/: BarPlotStrategy.py  HeatmapStrategy.py  IPlotStrategy.py  ViolinPlotSeabornStrategy.py
src/data_acess/: IDataRetrieverStrategy.py
src/machine_learning/builder_strategy/: DecisionTreeStrategy.py  NaiveBayesStrategy.py  ParamGridStrategy.py  RandomForestStrategy.py  XGBoostStrategy.py
src/machine_learning/decorator/: CommonParamsDecorator.py  LogisticRegressionDecorator.py  ParamGridDecorator.py  RandomForestDecorator.py  SVCDecorator.py
